fixed textarea font size was too small

--- a/WebContent/style/base_ucn.css
+++ b/WebContent/style/base_ucn.css
@@ -157,6 +157,9 @@ input#ucn_uri, input#ucn_file, textarea, select {
 	font-size:0.8em;
 	padding:0.3em 0.2em 0.2em 0.4em;
 }
+textarea {
+	font-size:0.9em;
+}
 input#ucn_uri, textarea {
 	width:85%;
 	
